Fixed the overflowing of the input element on mobile

--- a/style.css
+++ b/style.css
@@ -169,9 +169,9 @@ main {
 }
 .form__label {
   width: 100%;
-  margin: 0 auto;
 }
 .form__input {
+  width: 100%;
   margin-bottom: 2rem;
   padding: 0.3rem 0.5rem;
   font: inherit;
